--- a/groupsite/home.css
+++ b/groupsite/home.css
@@ -2,11 +2,33 @@
 
 body {
     font-family: 'Roboto Condensed', sans-serif;
-    background-image: url("./images/maxim-berg-lnvpji4fC3c-unsplash.jpg");
-    background-size: cover;
     color: rgb(255, 255, 255);
+ background-image: url("./images/bgs/maxim-berg-lnvpji4fC3c-unsplash.jpg");
+    background-size: cover;
 
 }
+
+
+div#toast{
+background-color: #8a2be2;
+    background-size: cover;
+    color: rgb(255, 255, 255);
+    border-radius: 20px;
+    padding: 1px;
+
+}
+
+
+
+div#crumpet{
+    background-color: #d427ba;
+    background-size: cover;
+    color: rgb(255, 255, 255);
+    border-radius: 20px;
+    margin-top: 42px;
+    padding: 1px;
+    }
+    
 
 #sellers a {
     color: rgb(255, 255, 255);
@@ -159,6 +181,7 @@ input#query.search {
 div#section1 {
     margin-top: 15%;
     display: block;
+    margin-bottom: 5em;
 }
 
 #title img {
@@ -300,8 +323,8 @@ img#pic {
     border-color: white;
     border-style: solid;
     border-width: thick;
-    background-color: rgba(249, 55, 127, 0.75);
-    box-shadow: 0 8px 32px 0 rgb(117 1 137);
+    background-color: rgb(141 89 223);
+        box-shadow: 0 8px 32px 0 rgb(117 1 137);
     backdrop-filter: blur(12.5px);
     -webkit-backdrop-filter: blur(12.5px);
     border-radius: 10px;
@@ -322,6 +345,7 @@ div#b1,
 #b6 {
     width: 16%;
     padding: 10px;
+    text-align: center;
 }
 
 h1#section4h1 {
