--- a/groupsite/electronics.css
+++ b/groupsite/electronics.css
@@ -375,6 +375,7 @@ img#pic3 {
 }
 
 /* section for the items */
+/* section for the items */
 div#toast {
     background-color: rgba(119, 25, 140, 0.715);
     color: rgb(255, 255, 255);
@@ -409,8 +410,8 @@ div#toast {
   }
   
   .item img {
-    width: 100%;
-    height: 200px;
+    width: 80%;
+    height: 80%;
     object-fit: cover;
     border-radius: 10px;
   }
@@ -426,10 +427,15 @@ div#toast {
   }
   
   @media screen and (max-width: 768px) {
+    #section3 {
+      flex-direction: column;
+    }
+  
     .item {
-      flex-basis: calc(50% - 20px);
+      flex-basis: 100%;
     }
   }
+  
   
   
 
