--- a/groupsite/home.css
+++ b/groupsite/home.css
@@ -371,6 +371,7 @@ img#pic3 {
     height: auto;
     border-radius: 30px;
     margin-left: 10px;
+    margin-bottom: 10px;
     padding-right: 10px;
 }
 
