--- a/groupsite/home.css
+++ b/groupsite/home.css
@@ -30,7 +30,38 @@ div#crumpet{
     margin-bottom: 40px;
     padding: 1px;
     }
+
+
     
+    #bottom-right-button {
+        position: absolute;
+        bottom: 0;
+        right: 0;
+        margin: 20px;
+        padding: 10px 40px;
+        background-color: #c0cbf6;
+        color: #000000;
+        border: none;
+        border-radius: 4px;
+        cursor: pointer;
+      }
+
+/*button for item page*/
+      #crumpet #section4 article a button {
+        background-color: #c0cbf6;
+        border: none;
+        color: #000000;
+        padding: 5px 30px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;
+        margin: 4px 2px;
+        border-radius: 10px;
+        cursor: pointer;
+      }
+       
+      
 
 #sellers a {
     color: rgb(255, 255, 255);
