--- a/groupsite/home.css
+++ b/groupsite/home.css
@@ -193,9 +193,6 @@ img#login {
     height: fit-content;
 }
 
-
-
-
 form#form {
     border-radius: 15px;
     padding: 5px 10px;
@@ -212,7 +209,7 @@ input#query.search {
 
 
 div#section1 {
-    margin-top: 15%;
+    margin-top: 8%;
     display: block;
     margin-bottom: 5em;
 }
@@ -406,8 +403,7 @@ img#pic3 {
     padding-right: 10px;
 }
 
-
-
+/* footer*/
 
 footer {
     background-color: rgb(255 255 255 / 31%);
