--- a/groupsite/basket.css
+++ b/groupsite/basket.css
@@ -169,77 +169,7 @@ button svg {
   height: 20px;
 }
 
-h1#section3h1 {
-  margin-left: 1em;
-  padding: 0;
-  margin-top: 1em;
-}
-
-div#section3 {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-top: 2em;
-}
-
-img#pic {
-  max-width: 100%;
-  height: auto;
-  border-radius: 20px;
-  /* Add margin to all images except the last one */
-  border-color: white;
-  border-style: solid;
-  border-width: thick;
-  background-color: rgb(141 89 223);
-  box-shadow: 0 8px 32px 0 rgb(117 1 137);
-  backdrop-filter: blur(12.5px);
-  -webkit-backdrop-filter: blur(12.5px);
-  border-radius: 10px;
-  border: 1px solid rgba(255, 255, 255, 0.18);
-}
-
-img#pic:last-of-type {
-  margin-right: 0;
-  /* Remove margin from the last image */
-}
-
-div#b1,
-#b2,
-#b3,
-#b4,
-#b5,
-#b5,
-#b6 {
-  padding: 10px;
-  text-align: center;
-}
-
-h1#section4h1 {
-  margin-left: 1em;
-  padding: 0;
-  margin-top: 1em;
-}
-
-img#pic2 {
-  width: 35%;
-  height: 450px;
-  border-radius: 30px;
-  margin-left: 10px;
-  padding-right: 10px;
-}
-
-div#section4 {
-  display: flex;
-}
-
-img#pic3 {
-  width: 100%;
-  height: auto;
-  border-radius: 30px;
-  margin-left: 10px;
-  padding-right: 10px;
-}
-
+/* Shopping basket*/
 .shopping-basket {
   margin: 20px auto;
   max-width: 800px;
@@ -319,6 +249,7 @@ thead {
   text-decoration: none;
 }
 
+/* Footer*/
 footer {
   background-color: rgb(255 255 255 / 31%);
   color: #020202;
@@ -411,57 +342,4 @@ li a:hover {
   .search {
     width: 100%;
   }
-}
-
-/* For screens that are 1200px wide or less */
-@media (max-width: 1200px) {
-  /* Modify the layout of the category images */
-  #section3 {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-  }
-  #b1,
-  #b2,
-  #b3,
-  #b4,
-  #b5,
-  #b6 {
-    width: 33%;
-  }
-}
-
-#formdeliveryaddress {
-  background-color: rgba(119, 25, 140, 0.715);
-  padding: 20px;
-  border-radius: 10px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  max-width: 600px;
-  margin: 0 auto;
-}
-
-input[type="text"],
-select,
-textarea {
-  width: 100%;
-  padding: 12px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-  box-sizing: border-box;
-  margin-top: 6px;
-  margin-bottom: 16px;
-  resize: vertical;
-}
-
-input[type="submit"] {
-  background-color: #4caf50;
-  color: white;
-  padding: 12px 20px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-}
-
-input[type="submit"]:hover {
-  background-color: #45a049;
 }
