--- a/groupsite/delivery_address.css
+++ b/groupsite/delivery_address.css
@@ -169,132 +169,62 @@ button svg {
   height: 20px;
 }
 
-h1#section3h1 {
-  margin-left: 1em;
-  padding: 0;
-  margin-top: 1em;
-}
-
-div#section3 {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-top: 2em;
-}
-
-img#pic {
-  max-width: 100%;
-  height: auto;
-  border-radius: 20px;
-  /* Add margin to all images except the last one */
-  border-color: white;
-  border-style: solid;
-  border-width: thick;
-  background-color: rgb(141 89 223);
-  box-shadow: 0 8px 32px 0 rgb(117 1 137);
-  backdrop-filter: blur(12.5px);
-  -webkit-backdrop-filter: blur(12.5px);
-  border-radius: 10px;
-  border: 1px solid rgba(255, 255, 255, 0.18);
-}
-
-img#pic:last-of-type {
-  margin-right: 0;
-  /* Remove margin from the last image */
-}
-
-div#b1,
-#b2,
-#b3,
-#b4,
-#b5,
-#b5,
-#b6 {
-  padding: 10px;
-  text-align: center;
-}
-
-h1#section4h1 {
-  margin-left: 1em;
-  padding: 0;
-  margin-top: 1em;
-}
-
-img#pic2 {
-  width: 35%;
-  height: 450px;
-  border-radius: 30px;
-  margin-left: 10px;
-  padding-right: 10px;
-}
-
-div#section4 {
-  display: flex;
-}
-
-img#pic3 {
-  width: 100%;
-  height: auto;
-  border-radius: 30px;
-  margin-left: 10px;
-  padding-right: 10px;
-}
-
-.shopping-basket {
-  margin: 20px auto;
-  max-width: 800px;
-}
-
-table {
-  width: 100%;
-  border-collapse: collapse;
-}
-
-th,
-td {
-  text-align: left;
-  padding: 10px;
+/* Form delivery address */
+#formdeliveryaddress {
   background-color: rgba(119, 25, 140, 0.715);
-}
-
-tbody tr:nth-child(even) {
-  background-color: rgba(126, 41, 145, 0.54);
-}
-
-.basket-item {
-  display: flex;
-  align-items: center;
-}
-
-.basket-item img {
-  width: 50%;
-  height: auto;
+  padding: 20px;
   border-radius: 10px;
-  object-fit: cover;
-  margin-right: 20px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+  max-width: 600px;
+  margin: 0 auto;
 }
 
-.item-details h3 {
-  margin: 0;
-  font-size: 1.2em;
+input[type="text"],
+select,
+textarea {
+  width: 100%;
+  padding: 12px;
+  border: 1px solid #ccc;
+  border-radius: 20px;
+  box-sizing: border-box;
+  margin-top: 6px;
+  margin-bottom: 16px;
+  resize: vertical;
 }
 
-.item-details p {
-  margin: 0;
-  font-size: 0.8em;
-  color: hsl(0, 33%, 97%);
+input[type="submit"] {
+  background-color: #f6d8df;
+  color: #020202;
+  padding: 12px 20px;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
 }
 
-tfoot td {
-  font-weight: bold;
-  background-color: rgba(87, 17, 101, 0.823);
+input[type="submit"]:hover {
+  background-color: #f3a0b3;
 }
 
-thead {
-  font-weight: bold;
-  background-color: rgba(22, 4, 26, 0.784);
+#formdeliveryaddress button[type="submit"] {
+  background-color: #c0cbf6;
+  border: none;
+  color: #000000;
+  padding: 5px 30px;
+  text-align: center;
+  width: fit-content;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  margin: 4px 2px;
+  border-radius: 10px;
+  cursor: pointer;
 }
 
+#formdeliveryaddress button[type="submit"] :hover {
+  background-color: #8787e4;
+}
+
+/* Footer */
 footer {
   background-color: rgb(255 255 255 / 31%);
   color: #020202;
@@ -387,76 +317,4 @@ li a:hover {
   .search {
     width: 100%;
   }
-}
-
-/* For screens that are 1200px wide or less */
-@media (max-width: 1200px) {
-  /* Modify the layout of the category images */
-  #section3 {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-  }
-  #b1,
-  #b2,
-  #b3,
-  #b4,
-  #b5,
-  #b6 {
-    width: 33%;
-  }
-}
-
-#formdeliveryaddress {
-  background-color: rgba(119, 25, 140, 0.715);
-  padding: 20px;
-  border-radius: 10px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  max-width: 600px;
-  margin: 0 auto;
-}
-
-input[type="text"],
-select,
-textarea {
-  width: 100%;
-  padding: 12px;
-  border: 1px solid #ccc;
-  border-radius: 20px;
-  box-sizing: border-box;
-  margin-top: 6px;
-  margin-bottom: 16px;
-  resize: vertical;
-}
-
-input[type="submit"] {
-  background-color: #f6d8df;
-  color: #020202;
-  padding: 12px 20px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-}
-
-input[type="submit"]:hover {
-  background-color: #f3a0b3;
-}
-
-#formdeliveryaddress button[type="submit"] {
-  background-color: #c0cbf6;
-  border: none;
-  color: #000000;
-  padding: 5px 30px;
-  text-align: center;
-  width: fit-content;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
-  border-radius: 10px;
-  cursor: pointer;
-}
-
-#formdeliveryaddress button[type="submit"] :hover {
-  background-color: #8787e4;
 }
