adjusting basket icon

--- a/groupsite/home.css
+++ b/groupsite/home.css
@@ -146,7 +146,6 @@ div.topbar {
     justify-content: center;
 }
 
-
 .navigation {
     display: flex;
     justify-content: space-between;
@@ -154,15 +153,6 @@ div.topbar {
     width: 80%;
     margin: 0 auto;
 }
-
-#cart-icon {
-    filter: invert(1); /* to change the icon to black */
-  }
-  
-#cart:focus #cart-icon {
-    filter: invert(0) sepia(1) saturate(5) hue-rotate(150deg); /* to change the icon to red */
-  }
-  
 
 div#loginsection {
     background-color: rgba(249, 55, 127, 0.75);
@@ -215,6 +205,12 @@ input#query.search {
     background-color: transparent;
     border: none;
 }
+
+#basket-icon-black {
+    display: none;
+    width: 24px;
+    height: 24px;
+  }
 
 /* Style the nav2 */
 .nav2 a {
