--- a/groupsite/home.css
+++ b/groupsite/home.css
@@ -27,7 +27,7 @@ div#crumpet{
     color: rgb(255, 255, 255);
     border-radius: 20px;
     margin-top: 42px;
-    margin-bottom: 40px;
+    margin-bottom: 60px;
     padding: 1px;
     }
 
@@ -59,6 +59,10 @@ div#crumpet{
         margin: 4px 2px;
         border-radius: 10px;
         cursor: pointer;
+      }
+
+      #crumpet #section4 article a button:hover {
+        background-color: #9d7ae4;
       }
        
       
@@ -443,8 +447,10 @@ div#section4 {
 .seller-info {
     margin-top: 20px;
     padding: 20px;
-    background-color: #f6149f6a;
+    background-color: #2e14f66a;
     border-radius: 20px;
+    width: 80%;
+    margin:0 auto;
   }
   
   .seller-info h2 {
@@ -469,11 +475,13 @@ div#section4 {
     font-size: 16px;
     font-style: italic;
     margin: 5px 0 10px;
+    display: flex;
+    align-items: center;
   }
 
   .seller-info p.feedback img {
-    width: 48px;
-    height: 48px;
+    width: 24px;
+    height: 24px;
     margin-right: 10px;
   }
   
@@ -521,9 +529,6 @@ div#section4 {
     margin-bottom: 10px;
   }
     
-  
-  
-
 img#pic3 {
     width: 50%;
     height: 60%;
@@ -532,6 +537,60 @@ img#pic3 {
     margin-bottom: 10px;
     padding-right: 10px;
 }
+
+/*contact seller */
+
+.contact-seller {
+    margin-top: 60px;
+    padding: 20px;
+    background-color: rgba(119, 25, 140, 0.715);
+    border-radius: 20px;
+  }
+
+  .contact-seller h2 {
+    font-size: 24px;
+    font-weight: bold;
+  }
+
+  .contact-seller form {
+    margin-top: 20px;
+  }
+
+  .contact-seller label {
+    display: block;
+    font-size: 16px;
+    margin-bottom: 10px;
+  }
+
+  .contact-seller textarea {
+    display: block;
+    width: 80%;
+    height: 100px;
+    font-size: 16px;
+    padding: 10px;
+    border: none;
+    border-radius: 10px;
+    resize: none;
+    margin-bottom: 10px;
+  }
+
+  .contact-seller button {
+    background-color: #c0cbf6;
+    color: #000000;
+    padding: 5px 30px;
+    text-align: center;
+    border: none;
+    border-radius: 10px;
+    font-size: 16px;
+    margin: 4px 2px;
+    cursor: pointer;
+  }
+
+  .contact-seller button:hover {
+    background-color: #9d7ae4;
+  }
+
+  
 
 /* footer*/
 
