--- a/groupsite/basket/basket.css
+++ b/groupsite/basket/basket.css
@@ -375,6 +375,35 @@ img#pic3 {
   }
 
 
+
+
+  .button-shopping,
+  .button-delivery {
+    display: inline-block;
+    margin: 10px;
+    padding: 8px 16px;
+    border-radius: 20px;
+    background-color: #f6d8f0;
+    color: #020202;
+    border: none;
+    width:fit-content;
+    cursor: pointer;
+    text-decoration: none;
+  }
+  
+  .button-delivery {
+    float: right;
+  }
+
+  .button-shopping,
+  .button-delivery:hover {
+    background-color: #f687e0;
+    text-decoration: none;
+} 
+  
+
+  
+
 footer {
     background-color: rgb(255 255 255 / 31%);
     color: #020202;
@@ -501,7 +530,7 @@ input[type=text], select, textarea {
   width: 100%;
   padding: 12px;
   border: 1px solid #ccc;
-  border-radius: 20px;
+  border-radius: 4px;
   box-sizing: border-box;
   margin-top: 6px;
   margin-bottom: 16px;
@@ -509,8 +538,8 @@ input[type=text], select, textarea {
 }
 
 input[type=submit] {
-  background-color: #f6d8df;
-  color: #020202;
+  background-color: #4CAF50;
+  color: white;
   padding: 12px 20px;
   border: none;
   border-radius: 4px;
@@ -518,7 +547,7 @@ input[type=submit] {
 }
 
 input[type=submit]:hover {
-  background-color: #f3a0b3;
+  background-color: #45a049;
 }
 
   
