--- a/groupsite/normalize.css
+++ b/groupsite/normalize.css
@@ -16,6 +16,13 @@ html {
 /* Sections
    ========================================================================== */
 
+/**
+ * Remove the margin in all browsers.
+ */
+
+body {
+  margin: 0;
+}
 
 /**
  * Render the `main` element consistently in IE.
@@ -214,7 +221,6 @@ button:-moz-focusring,
 [type="submit"]:-moz-focusring {
   outline: 1px dotted ButtonText;
 }
-
 
 /**
  * Correct the padding in Firefox.
