--- a/groupsite/payments/pay.css
+++ b/groupsite/payments/pay.css
@@ -15,7 +15,6 @@
   min-height: 100vh;
   background: url("./images/bgs/maxim-berg-lnvpji4fC3c-unsplash.jpg") no-repeat
     center center fixed;
-  background-size: cover;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -28,8 +27,9 @@
   border-radius: 5px;
   box-shadow: 0 10px 15px rgba(0, 0, 0, 0.1);
   padding: 20px;
-  width: 600px;
+  max-width: 600px; /* Changed width to max-width */
   padding-top: 160px;
+  width: 100%; /* Added width */
 }
 
 .container form .inputBox {
@@ -54,6 +54,7 @@
 .container form .flexbox {
   display: flex;
   gap: 15px;
+  flex-wrap: wrap; /* Added flex-wrap */
 }
 
 .container form .flexbox .inputBox {
@@ -81,7 +82,8 @@
   margin-bottom: -150px;
   position: relative;
   height: 250px;
-  width: 400px;
+  max-width: 400px; /* Changed width to max-width */
+  width: 100%; /* Added width */
 }
 
 .container .card-container .front {
@@ -173,5 +175,5 @@
 
 .container .card-container .back .box img {
   margin-top: 30px;
-  height: 30px;
+   height: 30px;
 }
