--- a/groupsite/delivery_address.css
+++ b/groupsite/delivery_address.css
@@ -42,7 +42,7 @@ body {
 div.topbar {
   text-align: right;
   overflow: hidden;
-  background: rgb(255 255 255 / 31%);
+  background: rgba(255, 255, 255, 0.55);
   box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
   backdrop-filter: blur(12.5px);
   -webkit-backdrop-filter: blur(12.5px);
@@ -255,7 +255,7 @@ input[type="submit"]:hover {
 
 /* Footer */
 footer {
-  background-color: rgb(255 255 255 / 31%);
+  background-color: rgba(255, 255, 255, 0.658);
   color: #020202;
   font-size: 14px;
   margin-top: 100px;
