--- a/groupsite/electronics.css
+++ b/groupsite/electronics.css
@@ -29,7 +29,7 @@ div#toast {
 /* Change the color of links on hover */
 .topbar a:hover {
   color: black;
-  background: rgba(255, 255, 255, 0.85);
+  background: rgba(255, 255, 255, 0.55);
   box-shadow: 0 8px 32px 0 rgba(31, 38, 135, 0.37);
   backdrop-filter: blur(12.5px);
   -webkit-backdrop-filter: blur(12.5px);
@@ -315,7 +315,7 @@ a {
 
 /* Footer */
 footer {
-  background-color: rgb(255 255 255 / 31%);
+  background-color: rgba(255, 255, 255, 0.658);
   color: #020202;
   font-size: 14px;
   padding: 30px;
