--- a/groupsite/payments/pay.css
+++ b/groupsite/payments/pay.css
@@ -13,13 +13,9 @@
 
 .container {
   min-height: 100vh;
-<<<<<<< HEAD
-  background: url("./images/bgs/withoutdots.jpg") no-repeat center center fixed;
-  background-size: cover;
-=======
   background: url("./images/bgs/maxim-berg-lnvpji4fC3c-unsplash.jpg") no-repeat
     center center fixed;
->>>>>>> a8a7c01c8cdd70482cd9ec133ecec5a7aaafa6dc
+  background-size: cover;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -32,9 +28,8 @@
   border-radius: 5px;
   box-shadow: 0 10px 15px rgba(0, 0, 0, 0.1);
   padding: 20px;
-  max-width: 600px; /* Changed width to max-width */
+  width: 600px;
   padding-top: 160px;
-  width: 100%; /* Added width */
 }
 
 .container form .inputBox {
@@ -59,7 +54,6 @@
 .container form .flexbox {
   display: flex;
   gap: 15px;
-  flex-wrap: wrap; /* Added flex-wrap */
 }
 
 .container form .flexbox .inputBox {
@@ -87,8 +81,7 @@
   margin-bottom: -150px;
   position: relative;
   height: 250px;
-  max-width: 400px; /* Changed width to max-width */
-  width: 100%; /* Added width */
+  width: 400px;
 }
 
 .container .card-container .front {
@@ -180,5 +173,5 @@
 
 .container .card-container .back .box img {
   margin-top: 30px;
-   height: 30px;
+  height: 30px;
 }
