--- a/groupsite/basket.css
+++ b/groupsite/basket.css
@@ -131,6 +131,7 @@ input#query.search {
 .nav2 a:first-of-type::after {
   content: "⇒";
   font-weight: bold;
+  margin-left: 5px;
 }
 
 .nav2 a:not(:last-of-type):hover {
